--- a/index.html
+++ b/index.html
@@ -20,16 +20,8 @@
 </head>
 <body>
 
+<!-- PreLoader -->
 <div class="load" id="page_load"><div class="load_span"></div></div>
-<script src="scripts/load.js"></script>
-
-<noscript class="warning">
-    <h2 class="warning_title">Error</h2>
-    <p>
-        JavaScript don`t working!<br>
-        If .
-    </p>
-</noscript>
 
 <!-- All svg icons -->
 <svg display="none">
@@ -55,49 +47,80 @@
     <symbol id="icon_user" viewBox="-42 0 512 512.002">
         <g><path d="m210.351562 246.632812c33.882813 0 63.222657-12.152343 87.195313-36.128906 23.972656-23.972656 36.125-53.304687 36.125-87.191406 0-33.875-12.152344-63.210938-36.128906-87.191406-23.976563-23.96875-53.3125-36.121094-87.191407-36.121094-33.886718 0-63.21875 12.152344-87.191406 36.125s-36.128906 53.308594-36.128906 87.1875c0 33.886719 12.15625 63.222656 36.132812 87.195312 23.976563 23.96875 53.3125 36.125 87.1875 36.125zm0 0"/><path d="m426.128906 393.703125c-.691406-9.976563-2.089844-20.859375-4.148437-32.351563-2.078125-11.578124-4.753907-22.523437-7.957031-32.527343-3.308594-10.339844-7.808594-20.550781-13.371094-30.335938-5.773438-10.15625-12.554688-19-20.164063-26.277343-7.957031-7.613282-17.699219-13.734376-28.964843-18.199219-11.226563-4.441407-23.667969-6.691407-36.976563-6.691407-5.226563 0-10.28125 2.144532-20.042969 8.5-6.007812 3.917969-13.035156 8.449219-20.878906 13.460938-6.707031 4.273438-15.792969 8.277344-27.015625 11.902344-10.949219 3.542968-22.066406 5.339844-33.039063 5.339844-10.972656 0-22.085937-1.796876-33.046874-5.339844-11.210938-3.621094-20.296876-7.625-26.996094-11.898438-7.769532-4.964844-14.800782-9.496094-20.898438-13.46875-9.75-6.355468-14.808594-8.5-20.035156-8.5-13.3125 0-25.75 2.253906-36.972656 6.699219-11.257813 4.457031-21.003906 10.578125-28.96875 18.199219-7.605469 7.28125-14.390625 16.121094-20.15625 26.273437-5.558594 9.785157-10.058594 19.992188-13.371094 30.339844-3.199219 10.003906-5.875 20.945313-7.953125 32.523437-2.058594 11.476563-3.457031 22.363282-4.148437 32.363282-.679688 9.796875-1.023438 19.964844-1.023438 30.234375 0 26.726562 8.496094 48.363281 25.25 64.320312 16.546875 15.746094 38.441406 23.734375 65.066406 23.734375h246.53125c26.625 0 48.511719-7.984375 65.0625-23.734375 16.757813-15.945312 25.253906-37.585937 25.253906-64.324219-.003906-10.316406-.351562-20.492187-1.035156-30.242187zm0 0"/></g>
     </symbol>
+    <symbol id="icon_home" viewBox="0 0 512.001 512.001">
+        <g><path d="M503.402,228.885L273.684,19.567c-10.083-9.189-25.288-9.188-35.367-0.001L8.598,228.886c-8.077,7.36-10.745,18.7-6.799,28.889c3.947,10.189,13.557,16.772,24.484,16.772h36.69v209.721c0,8.315,6.742,15.057,15.057,15.057h125.914c8.315,0,15.057-6.741,15.057-15.057V356.932h74.002v127.337c0,8.315,6.742,15.057,15.057,15.057h125.908c8.315,0,15.057-6.741,15.057-15.057V274.547h36.697c10.926,0,20.537-6.584,24.484-16.772C514.147,247.585,511.479,236.246,503.402,228.885z"/></g>
+        <g><path d="M445.092,42.73H343.973l116.176,105.636v-90.58C460.149,49.471,453.408,42.73,445.092,42.73z"/></g>
+    </symbol>
+    <symbol id="icon_check" viewBox="0 -46 417.81333 417">
+        <g><path d="m159.988281 318.582031c-3.988281 4.011719-9.429687 6.25-15.082031 6.25s-11.09375-2.238281-15.082031-6.25l-120.449219-120.46875c-12.5-12.5-12.5-32.769531 0-45.246093l15.082031-15.085938c12.503907-12.5 32.75-12.5 45.25 0l75.199219 75.203125 203.199219-203.203125c12.503906-12.5 32.769531-12.5 45.25 0l15.082031 15.085938c12.5 12.5 12.5 32.765624 0 45.246093zm0 0"/></g>
+    </symbol>
 </svg>
+
+<!-- Waring 'don`t working JavaScript' -->
+<noscript class="warning">
+    <h2 class="warning_title">Error</h2>
+    <p>
+        JavaScript don`t working!<br>
+        If .
+    </p>
+</noscript>
+
+<!-- eclipse -->
+<div id="eclipse"></div>
 
 <!-- All modal windows -->
 <div class="modals">
     <div class="modal" id="login">
-        <div class="modal_inner">
-            <div class="modal_head">
-                <h2 class="modal_title">Login</h2>
-            </div>
-            <div class="modal_content">
-                <div class="tabs">
-                    <div class="tabs_buttons">
-                        <button class="tab_button active" onclick="tab_togle(this)" value="tab-1">Sign IN</button>
-                        <button class="tab_button" onclick="tab_togle(this)" value="tab-2">Sign UP</button>
+        <div class="modal_head">
+            <h2 class="modal_title">Login</h2>
+        </div>
+        <div class="modal_content">
+            <div class="tabs">
+                <div class="tabs_buttons">
+                    <button class="tab_button active" onclick="tab_togle(this)" value="tab-1">Sign IN</button>
+                    <button class="tab_button" onclick="tab_togle(this)" value="tab-2">Sign UP</button>
+                </div>
+                <div class="tabs_contents">
+                    <div class="tab_content active" id="tab-1">
+                        <form action="#" method="post">
+                            <input type="text" name="login" placeholder="login">
+                            <input type="password" name="password" placeholder="password">
+                            <button class="btn" type="submit">Submit</button>
+                        </form>
                     </div>
-                    <div class="tabs_contents">
-                        <div class="tab_content active" id="tab-1">
-                            <form action="#" method="post">
-                                <input type="text" name="login" placeholder="login">
-                                <input type="password" name="password" placeholder="password">
-                                <button class="btn" type="submit">Submit</button>
-                            </form>
-                        </div>
-                        <div class="tab_content" id="tab-2">
-                            <form action="#" method="post">
-                                <input type="text" name="login" placeholder="login">
-                                <input type="password" name="password" placeholder="password">
-                                <button class="btn" type="submit">Submit</button>
-                            </form>
-                        </div>
+                    <div class="tab_content" id="tab-2">
+                        <form action="#" method="post">
+                            <input type="text" name="login" placeholder="login">
+                            <input type="password" name="password" placeholder="password">
+                            <button class="btn" type="submit">Submit</button>
+                        </form>
                     </div>
                 </div>
             </div>
         </div>
     </div>>
     <div class="modal" id="settings">
-        <div class="modal_inner">
-            <div class="modal_head">
-                <h2 class="modal_title">Settings</h2>
-            </div>
-            <div class="modal_content">
-                <input type="color" ondblclick="setColor(this)">
-            </div>
+        <div class="modal_head">
+            <h2 class="modal_title">Settings</h2>
+        </div>
+        <div class="modal_content">
+            <label>Main</label>
+            <input type="radio" class="radiobtn color_radio" value="red" name="color_main">
+            <input type="radio" class="radiobtn color_radio" value="green" name="color_main">
+            <input type="radio" class="radiobtn color_radio" value="blue" name="color_main">
+            <input type="radio" class="radiobtn color_radio" value="yellow" name="color_main">
+            <br><hr>
+            <label>Bg</label>
+            <input type="radio" name="color_bg" class="radiobtn color_radio" value="black">
+            <input type="radio" name="color_bg" class="radiobtn color_radio" value="dark">
+            <input type="radio" name="color_bg" class="radiobtn color_radio" value="light">
+            <input type="radio" name="color_bg" class="radiobtn color_radio" value="white">
+            <br><hr>
+            <label>Fg</label>
+            <input type="radio" name="color_fg" class="radiobtn color_radio" value="black">
+            <input type="radio" name="color_fg" class="radiobtn color_radio" value="dark">
+            <input type="radio" name="color_fg" class="radiobtn color_radio" value="light">
+            <input type="radio" name="color_fg" class="radiobtn color_radio" value="white">
         </div>
     </div>
 </div>
@@ -112,23 +135,23 @@
                 <button class="menu_btn" id="menu_open">
                     <svg class="icon"><use xlink:href="#icon_menu"></use></svg>
                 </button>
-                <ul class="nav_list" id="menu">
+                <div class="nav_list" id="menu">
                     <button class="menu_btn" id="menu_close">
                         <svg class="icon"><use xlink:href="#icon_close"></use></svg>
                         Menu
                     </button>
-                    <li class="nav_item active">Home</li>
-                    <li class="nav_item nav_item_list">
+                    <div class="nav_item active">Home</div>
+                    <div class="nav_item nav_item_list">
                         Articles
                         <ul class="nav_sub_list">
                             <li class="nav_item nav_sub_item">Windows</li>
                             <li class="nav_item nav_sub_item">Linux</li>
                             <li class="nav_item nav_sub_item">Android</li>
                         </ul>
-                    </li>
-                    <li class="nav_item">Forums</li>
-                    <li class="nav_item">About</li>
-                </ul>
+                    </div>
+                    <div class="nav_item">Forums</div>
+                    <div class="nav_item">About</div>
+                </div>
             </nav>
             <div class="toggles">
                 <button class="btn toggles_btn">
@@ -145,7 +168,13 @@
             </div>
         </div>
     </header>
-    <main class="menu_close"></main>
+    <main class="menu_close">
+        <div class="main_head">
+            <svg class="icon"><use xlink:href="#icon_home"></use></svg>
+            <h2>Home</h2>
+        </div>
+        <div class="main_body"></div>
+    </main>
     <footer class="menu_close">
         <div class="footer_inner">
             <span class="copyleft">CopyLeft AnonimHak © 2018-2020</span>
@@ -154,6 +183,8 @@
 </div>
 
 <!-- Import JavaScript scripts -->
+<script src="scripts/load.js"></script>
+<script src="scripts/eclipse.js"></script>
 <script src="scripts/scroll.js"></script>
 <script src="scripts/keyboard.js"></script>
 <script src="scripts/nav.js"></script>
