--- a/index.html
+++ b/index.html
@@ -105,10 +105,10 @@
         </div>
         <div class="modal_content">
             <label>Main</label>
-            <input type="radio" class="radiobtn color_radio" value="red" name="color_main">
-            <input type="radio" class="radiobtn color_radio" value="green" name="color_main">
-            <input type="radio" class="radiobtn color_radio" value="blue" name="color_main">
-            <input type="radio" class="radiobtn color_radio" value="yellow" name="color_main">
+            <input type="radio" name="color_main" class="radiobtn color_radio" value="red">
+            <input type="radio" name="color_main" class="radiobtn color_radio" value="yellow">
+            <input type="radio" name="color_main" class="radiobtn color_radio" value="green">
+            <input type="radio" name="color_main" class="radiobtn color_radio" value="blue">
             <br><hr>
             <label>Bg</label>
             <input type="radio" name="color_bg" class="radiobtn color_radio" value="black">
