--- a/index.html
+++ b/index.html
@@ -105,19 +105,19 @@
         </div>
         <div class="modal_content">
             <label>Main</label>
-            <input type="radio" name="color_main" class="radiobtn color_radio" value="red">
+            <input type="radio" name="color_main" class="radiobtn color_radio" value="red" checked>
             <input type="radio" name="color_main" class="radiobtn color_radio" value="yellow">
             <input type="radio" name="color_main" class="radiobtn color_radio" value="green">
             <input type="radio" name="color_main" class="radiobtn color_radio" value="blue">
             <br><hr>
             <label>Bg</label>
-            <input type="radio" name="color_bg" class="radiobtn color_radio" value="black">
+            <input type="radio" name="color_bg" class="radiobtn color_radio" value="black" checked>
             <input type="radio" name="color_bg" class="radiobtn color_radio" value="dark">
             <input type="radio" name="color_bg" class="radiobtn color_radio" value="light">
             <input type="radio" name="color_bg" class="radiobtn color_radio" value="white">
             <br><hr>
             <label>Fg</label>
-            <input type="radio" name="color_fg" class="radiobtn color_radio" value="black">
+            <input type="radio" name="color_fg" class="radiobtn color_radio" value="black" checked>
             <input type="radio" name="color_fg" class="radiobtn color_radio" value="dark">
             <input type="radio" name="color_fg" class="radiobtn color_radio" value="light">
             <input type="radio" name="color_fg" class="radiobtn color_radio" value="white">
