button reset settings

--- a/index.html
+++ b/index.html
@@ -121,6 +121,8 @@
             <input type="radio" name="color_fg" class="radiobtn color_radio" value="dark">
             <input type="radio" name="color_fg" class="radiobtn color_radio" value="light">
             <input type="radio" name="color_fg" class="radiobtn color_radio" value="white">
+            <br><hr>
+            <button class="btn border" id="btnResetColors">Reset</button>
         </div>
     </div>
 </div>
