--- a/index.html
+++ b/index.html
@@ -77,18 +77,18 @@
         <div class="modal_content">
             <div class="tabs">
                 <div class="tabs_buttons">
-                    <button class="tab_button active" onclick="tab_togle(this)" value="tab-1">Sign IN</button>
-                    <button class="tab_button" onclick="tab_togle(this)" value="tab-2">Sign UP</button>
+                    <button class="tab_button active" value="sing-in">Sign IN</button>
+                    <button class="tab_button" value="sing-up">Sign UP</button>
                 </div>
                 <div class="tabs_contents">
-                    <div class="tab_content active" id="tab-1">
+                    <div class="tab_content active" id="sing-in">
                         <form action="#" method="post">
                             <input type="text" name="login" placeholder="login">
                             <input type="password" name="password" placeholder="password">
                             <button class="btn" type="submit">Submit</button>
                         </form>
                     </div>
-                    <div class="tab_content" id="tab-2">
+                    <div class="tab_content" id="sing-up">
                         <form action="#" method="post">
                             <input type="text" name="login" placeholder="login">
                             <input type="password" name="password" placeholder="password">
