--- a/index.html
+++ b/index.html
@@ -54,6 +54,12 @@
     <symbol id="icon_check" viewBox="0 -46 417.81333 417">
         <g><path d="m159.988281 318.582031c-3.988281 4.011719-9.429687 6.25-15.082031 6.25s-11.09375-2.238281-15.082031-6.25l-120.449219-120.46875c-12.5-12.5-12.5-32.769531 0-45.246093l15.082031-15.085938c12.503907-12.5 32.75-12.5 45.25 0l75.199219 75.203125 203.199219-203.203125c12.503906-12.5 32.769531-12.5 45.25 0l15.082031 15.085938c12.5 12.5 12.5 32.765624 0 45.246093zm0 0"/></g>
     </symbol>
+    <symbol id="icon_telegram" viewBox="0 -31 512 512">
+        <g><path d="m123.195312 260.738281 63.679688 159.1875 82.902344-82.902343 142.140625 112.976562 100.082031-450-512 213.265625zm242.5-131.628906-156.714843 142.941406-19.519531 73.566407-36.058594-90.164063zm0 0"/></g>
+    </symbol>
+    <symbol id="icon_youtube" viewBox="0 -77 512.00213 512">
+        <g><path d="m501.453125 56.09375c-5.902344-21.933594-23.195313-39.222656-45.125-45.128906-40.066406-10.964844-200.332031-10.964844-200.332031-10.964844s-160.261719 0-200.328125 10.546875c-21.507813 5.902344-39.222657 23.617187-45.125 45.546875-10.542969 40.0625-10.542969 123.148438-10.542969 123.148438s0 83.503906 10.542969 123.148437c5.90625 21.929687 23.195312 39.222656 45.128906 45.128906 40.484375 10.964844 200.328125 10.964844 200.328125 10.964844s160.261719 0 200.328125-10.546875c21.933594-5.902344 39.222656-23.195312 45.128906-45.125 10.542969-40.066406 10.542969-123.148438 10.542969-123.148438s.421875-83.507812-10.546875-123.570312zm0 0"/><path d="m204.96875 256 133.269531-76.757812-133.269531-76.757813zm0 0" fill="red"/></g>
+    </symbol>
 </svg>
 
 <!-- Waring 'don`t working JavaScript' -->
@@ -175,11 +181,19 @@
             <svg class="icon"><use xlink:href="#icon_home"></use></svg>
             <h2>Home</h2>
         </div>
-        <div class="main_body"></div>
+        <div class="main_body">
+            <div class="slidshow">
+                .slidshow
+            </div>
+        </div>
     </main>
     <footer class="menu_close">
         <div class="footer_inner">
             <span class="copyleft">CopyLeft AnonimHak © 2018-2020</span>
+            <div class="soc_networks">
+                <a href="" title="YouTube chenal"><svg class="icon"><use xlink:href="#icon_youtube"></use></svg></a>
+                <a href="" title="Telegram chenal"><svg class="icon"><use xlink:href="#icon_telegram"></use></svg></a>
+            </div>
         </div>
     </footer>
 </div>
