Add ToolTips and remove 'test'

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="styles/modal.css">
     <link rel="stylesheet" href="styles/tabs.css">
     <link rel="stylesheet" href="styles/footer.css">
+    <link rel="stylesheet" href="styles/slidshow.css">
 </head>
 <body>
 
@@ -182,17 +183,15 @@
             <h2>Home</h2>
         </div>
         <div class="main_body">
-            <div class="slidshow">
-                .slidshow
-            </div>
+            <div class="slidshow"></div>
         </div>
     </main>
     <footer class="menu_close">
         <div class="footer_inner">
             <span class="copyleft">CopyLeft AnonimHak © 2018-2020</span>
             <div class="soc_networks">
-                <a href="" title="YouTube chenal"><svg class="icon"><use xlink:href="#icon_youtube"></use></svg></a>
-                <a href="" title="Telegram chenal"><svg class="icon"><use xlink:href="#icon_telegram"></use></svg></a>
+                <a class="tooltip" href="#" data-title="YouTube chanal"><svg class="icon"><use xlink:href="#icon_youtube"></use></svg></a>
+                <a class="tooltip" href="#" data-title="Telegram chanal"><svg class="icon"><use xlink:href="#icon_telegram"></use></svg></a>
             </div>
         </div>
     </footer>
